# DSP_Mods_TO

./: DSP_Mods_TO.sln  LICENSE  README.md
AutoPilot/: AutoPilot.csproj  AutoPilotConfigManager.cs  AutoPilotExtension.cs  AutoPilotPlugin.cs  README.md
AutoPilot/Commons/: ConfigManager.cs  EnumUtils.cs  LogManager.cs
AutoPilot/Enums/: AutoPilotState.cs
AutoPilot/Patches/: Patch_VFInput.cs
AutoPilot/UI/: AutoPilotConfigUI.cs  AutoPilotDebugUI.cs  AutoPilotMainUI.cs  StringsUI.cs
AutoPilot/package/: manifest.json
CompressSave/: CHANGELOG.md  CompressSave.cs  CompressSave.csproj  PatchUILoadGame.cs  PatchUISaveGame.cs  README.md
CompressSave/LZ4WrapC/: CMakeLists.txt  LZ4Wrap.c
CompressSave/NoneWrapC/: CMakeLists.txt  nonewrap.c
CompressSave/Wrapper/: BufferWriter.cs  DoubleBuffer.cs  LZ4Wrapper.cs  NoneWrapper.cs  WinApi.cs  WrapperDefines.cs  ZstdWrapper.cs
CompressSave/ZstdWrapC/: CMakeLists.txt  zstdwrap.c
CompressSave/package/: manifest.json
CruiseAssist/: CruiseAssist.csproj  CruiseAssistConfigManager.cs  CruiseAssistExtensionAPI.cs  CruiseAssistPlugin.cs  README.md
CruiseAssist/Commons/: ConfigManager.cs  EnumUtils.cs  ListUtils.cs  LogManager.cs  Tuple.cs
CruiseAssist/Enums/: CruiseAssistMainUIViewMode.cs  CruiseAssistState.cs
CruiseAssist/Patches/: Patch_GameMain.cs  Patch_PlayerMoveDrift.cs  Patch_PlayerMoveFly.cs  Patch_PlayerMoveSail.cs  Patch_PlayerMoveWalk.cs  (+3 more)
XianTu/: BlueTuUIData.cs  EmbeddedFileLoad.cs  FileLoad.cs  FoundationBlueTu.txt  LoadManager.cs  Singleton.cs  XianTu.csproj  XianTuPlugin.cs  XianTuTest.cs  xiantu
(+27 files in other folders)
